--- a/literature.bib
+++ b/literature.bib
@@ -32,8 +32,8 @@
 Curial:
 1. Define endpoints
 2. Use authenticated encryption},
+  eprint       = {https://eprint.iacr.org/2022/449},
   groups       = {Requirements, Adversary Models},
-  url          = {https://eprint.iacr.org/2022/449},
 }
 
 @Article{dolev1983security,
@@ -632,6 +632,45 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   organization = {Springer},
   pages        = {83--107},
   eprint       = {https://link.springer.com/chapter/10.1007/3-540-46035-7_6},
+}
+
+@InProceedings{Braz2007,
+  author    = {Braz, Christina and Seffah, Ahmed and M'Raihi, David},
+  booktitle = {Human-Computer Interaction -- INTERACT 2007},
+  title     = {Designing a Trade-Off Between Usability and Security: A Metrics Based-Model},
+  year      = {2007},
+  address   = {Berlin, Heidelberg},
+  editor    = {Baranauskas, C{\'e}cilia and Palanque, Philippe and Abascal, Julio and Barbosa, Simone Diniz Junqueira},
+  pages     = {114--126},
+  publisher = {Springer Berlin Heidelberg},
+  abstract  = {The design of usable yet secure systems raises crucial questions when it comes to balancing properly security and usability. Finding the right tradeoff between these two quality attributes is not an easy endeavor. In this paper, we introduce an original design model based on a novel usability inspection method. This new method, named Security Usability Symmetry (SUS), exploits automata machines theory and introduces the concept of an advanced Multifunction Teller Machine (MTM). We demonstrate, via case study, how to use this model during the design of secure, usable interactive systems.},
+  eprint    = {https://doi.org/10.1007/978-3-540-74800-7_9},
+  isbn      = {978-3-540-74800-7},
+}
+
+@Article{Rehman2013,
+  author  = {ur Rehman, Tousif and Khan, Muhammad Naeem Ahmed and Riaz, Naveed},
+  journal = {International Journal of Information Technology and Computer Science (IJITCS)},
+  title   = {Analysis of requirement engineering processes, tools/techniques and methodologies},
+  year    = {2013},
+  number  = {3},
+  pages   = {40},
+  volume  = {5},
+  eprint  = {https://doi.org/10.5815/ijitcs.2013.03.05},
+}
+
+@TechReport{OpenPGP2007,
+  author = {Callas, Jon and Donnerhacke, Lutz and Finney, Hal and Shaw, David and Thayer, Rodney},
+  title  = {OpenPGP message format},
+  year   = {2007},
+  eprint = {https://www.rfc-editor.org/rfc/rfc4880},
+}
+
+@TechReport{SMIME2009,
+  author = {Schaad, Jim and Ramsdell, Blake and Turner, Sean},
+  title  = {{Secure/multipurpose internet mail extensions (S/MIME) version 4.0 message specification}},
+  year   = {2019},
+  eprint = {https://www.rfc-editor.org/rfc/rfc8551},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
