--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -3,39 +3,45 @@
 \begin{document}
 
 \chapter{Technical background}
-This chapter contains the technical and theoretical background of the thesis.
+This chapter covers the technical and theoretical background of the thesis.
 It provides short explanations of the concepts addressed in this work.
-Further, it aims to clarify what is meant by the used terms.
+Further, it aims to clarify the understanding of the terms used throughout the thesis.
 
 
 \section{Cryptographic concepts}
-This section covers the cryptographic concepts on which this thesis relies on.
+This section covers the cryptographic concepts the thesis relies on.
+Besides symmetric and asymmetric encryption it details the theoretical motivation for hybrid encryption schemes.
+Modern end-to-end encrypted protocol demand authenticity of the encrypted data~\cite{Mallory2022}.
+Thus, the concept of authenticated encryption is introduced.
 
 \subsection{Symmetric encryption}
 Symmetric encryption is characterized by the fact that the same key is used during encryption and decryption.
-This key is referred to as symmetric encryption key.
+This key is referred to as the symmetric encryption key.
 It must be transported securely from the sender to the receiver.
 Hence, symmetric encryption relies on a secure channel between the communicating entities.
 Symmetric encryption algorithms can be implemented very efficiently in hardware.
-For this reason they are of great practical importance.~\cite[300]{Eckert2018}
+For this reason, they are of great practical importance.~\cite[300]{Eckert2018}
 
 \subsection{Asymmetric encryption}
-On the contrast to symmetric encryption, asymmetric schemes do not use the same key for encryption and decryption.
-Each communicating partner is assigned a key-pair which consists of a public key and a private key.
+In contrast to symmetric encryption, asymmetric schemes do not use the same key for encryption and decryption.
+Each communicating partner is assigned a key pair which consists of a public key and a private key.
 While the private key must be kept secret, the public key must be known by other users and is thus publicly available.
 Asymmetric encryption schemes are characterized by the fact that data is encrypted using the public key of the receiver.
 The data can only be decrypted using the private key of the respective user.
-These schemes rely on sophisticated mathematical constructions which require complex computations.
-Hence, encrypting and decrypting data under asymmetric schemes is not as efficient as in symmetric schemes.
+These schemes are built upon sophisticated mathematical constructions requiring complex computations.
+Hence, encrypting and decrypting big amounts of data via asymmetric schemes is not as efficient as in symmetric schemes.
 However, no secure channel is necessary between the communicating entities.~\cite[331]{Eckert2018}
 
 
 \subsection{Hybrid encryption}
 \label{sec:hybrid}
 Hybrid encryption schemes combine symmetric and asymmetric schemes to overcome their limitations.
-Efficient and optimized symmetric schemes are used to encrypt the actual application data.
-The short symmetric key is then encrypted by an asymmetric scheme.
-This construction neither requires a secure channel, nor suffers it from the computational overhead of asymmetric schemes.~\cite{Wolf2007}
+Symmetric schemes are used to encrypt the application data efficiently.
+The symmetric key is then encrypted by an asymmetric scheme for the intended recipients.
+Since this key is short, the overhead of the asymmetric encryption algorithm is acceptable.
+A recipient can restore the symmetric key because he can decrypt the encrypted key with his private key.
+Finally, he can decrypt the application data using the symmetric key.
+This construction neither requires a secure channel nor suffers from the computational overhead of asymmetric schemes.~\cite{Wolf2007}
 
 \subsection{Authenticated encryption}
 \label{sec:aead}
@@ -43,58 +49,59 @@ Classical symmetrical or asymmetrical encryption algorithms protect the confiden
 However, integrity and authenticity are not guaranteed.
 Authenticated encryption overcomes this limitation.~\cite{Eckert2018, An2002}
 
-Symmetric schemes can be improved by integrating integrity protection (e.g. by hashing the content and attaching the hash to the cipher).
-If the integrity protection also involves a secret (e.g. by hashing the content along with the symmetric key used for encryption) the data can be also authenticated.
-The resulting hash value is referred to as authentication tag.
+Symmetric schemes can be improved by integrating integrity protection mechanisms (e.g. by hashing the content and attaching the hash to the cipher).
+If the integrity protection also involves a secret the data is authenticated (e.g. by hashing the content along with the symmetric key used for encryption) .
+The resulting hash value is referred to as the authentication tag.
 In practice, those schemes are known as the AEAD encryption mode of block ciphers (e.g. AES-GCM).
 They ensure the integrity and authenticity of the symmetrically encrypted data.
-A user is authenticated if it knows the symmetric key used to construct the cipher and the authentication tag.
+Users are authenticated if they know the symmetric key used to construct the cipher and the authentication tag.
 Please note that if a symmetric encryption key is shared among a group of users this weakens the authenticity:
-In this case a decrypting party can only ensure that any of the users knowing the secret key created the cipher.~\cite[315]{Eckert2018}
+In this case, a decrypting party can only ensure that any of the users knowing the secret key created the cipher.~\cite[315]{Eckert2018}
 
 Asymmetric schemes provide stronger security guarantees.
 A digital signature proves that a message was signed by a certain user (assuming the private key of the user is not leaked).
 If a digitally signed message is encrypted, the receiver can verify the originator of the message.
-Thus, combining public key encryption with digital signatures can also ensure confidentiality, authenticity and integrity of exchanged messages.~\cite{An2002}
+Thus, combining public key encryption with digital signatures can also ensure the confidentiality, authenticity, and integrity of exchanged messages.~\cite{An2002}
 
 \section{JSON Object Signing and Encryption}
-JSON Object Signing and Encryption (JOSE) is a collection of standards defined by the IETF~\cite{Barnes2014}.
+JSON Object Signing and Encryption (JOSE) is a collection of standards defined by IETF~\cite{Barnes2014}.
 It was created because traditional channel-based encryption layers (such as IPsec~\cite{IPSEC2011} or TLS~\cite{TLS2018}) only protect data between intermediate servers.
-However, those layers of encryption do not protected the data from the intermediate server itself.
-JOSE aims to provide security on the application layer, meaning that data handled by the application is embedded into a secure object.
-The JOSE specifications define three fundamental representations to serve for this purpose.~\cite{Barnes2014}
+However, those layers of encryption do not protect the data from the intermediate servers itself.
+JOSE aims to provide security on the application layer, meaning that application data is embedded into secure objects.
+This protects the data from intermediate servers enabling the construction of end-to-end encrypted protocols.
+The JOSE specifications define three fundamental representations to serve this purpose~\cite{Barnes2014}:
 \begin{itemize}
-    \item The JSON Web Signature (\emph{JWS}) format represents an integrity-protected object~\cite{JWS2015}.
-    \item The JSON Web Encryption (\emph{JWE}) format represents an confidentiality-protected object~\cite{JWE2015}.
-    \item The JSON Web Key (\emph{JWK}) format represents cryptographic keys~\cite{JWK2015}.
+    \item The JSON Web Signature (JWS) format represents an integrity-protected object~\cite{JWS2015}.
+    \item The JSON Web Encryption (JWE) format represents an confidentiality-protected object~\cite{JWE2015}.
+    \item The JSON Web Key (JWK) format represents cryptographic keys~\cite{JWK2015}.
 \end{itemize}
-Further, a JSON Web Token (\emph{JWT}) is a compact representation of JSON data~\cite{JWT2015}.
-It is passed as payload to \emph{JWS} and \emph{JWE} tokens.
-A \emph{JWT} token contains the JSON-encoded application data which must be protected.
-The protocol designed by this thesis relies on \emph{JWS} and \emph{JWE} tokens.
+Further, a JSON Web Token (JWT) is a compact representation of JSON data~\cite{JWT2015}.
+It is passed as the payload to the construction of JWS and JWE tokens.
+A JWT token contains the JSON-encoded application data which must be protected.
+The protocol designed by this thesis relies on JWS and JWE tokens.
 The following sections provide details about their internal structure.
 
 \subsection{JSON Web Signature}
-A JWS token contains integrity-protected data.
+A JWS token contains integrity-protected data~\cite{JWS2015}.
 It supports both, symmetric integrity protection (via message authentication codes) and asymmetric integrity protection (via digital signatures).
-It consists of a header, a payload and a signature.
+It consists of a header, a payload, and a signature.
 The payload contains the actual data which needs to be integrity-protected.
 The signature stores the MAC or the digital signature created by the sender of the message.
 This signature protects the payload and parts of the header.
-The header itself is split up into a protected header (which is integrity protected) and a unprotected heder.
+The header itself is split up into a protected header (which is integrity protected) and an unprotected header.
 As the name suggests, the signature does not protect the unprotected header.
-The header contains information about the algorithm used to secure the application data.~\cite{JWS2015}
+The header contains information about the algorithm used to secure the application data.
 
 \subsection{JSON Web Encryption}
 JWE tokens represent encrypted data~\cite{JWE2015}.
 Multiple encryption algorithms can be used to encrypt the application data.
-They are defined in the JSON Web Algorithm (\emph{JWA}) specification~\cite{JWA2015}.
-\emph{JWE} tokens enforce authenticated encryption and data can be encrypted for multiple recipients.
+They are defined in the JSON Web Algorithm (JWA) specification~\cite{JWA2015}.
+JWE tokens enforce authenticated encryption and data can be encrypted for multiple recipients.
 Two algorithms are required to construct them:
 First, the application data is encrypted using an authenticated symmetric encryption algorithm.
 The key used for this algorithm is then encrypted with a dedicated key-wrapping algorithm.
 The receiver of the token must first apply the key-wrapping algorithm to restore the symmetric key which then allows the decryption of the application data.
-Thus, a JWE token contains the following parts~\cite{JWE2015}:
+Thus, a JWE token consist of the following parts~\cite{JWE2015}:
 \begin{itemize}
     \item JOSE Header:
     It contains information about the used algorithms.
@@ -103,17 +110,16 @@ Thus, a JWE token contains the following parts~\cite{JWE2015}:
     \item JWE Initialization Vector: This part stores initialization vectors of the used encryption algorithms.
     \item JWE Additional Authenticated Data: This field might contain data which must be authenticated and integrity protected but not encrypted.
     \item JWE Ciphertext: This stores the encrypted application data.
-    \item JWE Authentication Tag: This field contains the authentication tag which allows a receiver to validate the received token.
+    \item JWE Authentication Tag: This field contains the authentication tag which allows the receiver to validate the authenticity and integrity of a received token.
 \end{itemize}
 
 
 \section{Key escrow}
 \label{sec:key-escrow}
-Key escrow refers to the fact that cryptographic keys are known by a server in the system~\cite{Gentry2003}.
-Cryptographic schemes exists where a key generation center computes and distributes keys for all participants~\cite{Sakai2007, Bethencourt2007}.
-This key generation center must be trusted since it knows all keys within the system.
-In particular, this allows the center to access private keys of the users meaning it can decrypt and sign arbitrary data.
-While this can be beneficial in certain scenarios (e.g. to provide access to personal keys during vacation substitutions~\cite{Hagg2022}), this conflicts with a strict interpretation of end-to-end encryption because it implies that not only the intended users can decrypt the data.
+Key escrow refers to the scenario where cryptographic keys of users are known by a server in the system~\cite{Gentry2003}.
+There are cryptographic schemes which rely on a trusted key generation computing and distributing keys for all participants~\cite{Sakai2007, Bethencourt2007}.
+This allows the center to access the private keys of all users meaning it can decrypt and sign arbitrary data.
+While key escrow can be beneficial in certain scenarios (e.g. to provide access to personal keys during vacation substitutions~\cite{Hagg2022}), it conflicts with a strict interpretation of end-to-end encryption because it implies that not only the intended users can decrypt the data.
 
 \section{End-to-end encryption} 
 \label{sec:end-to-end}
@@ -122,115 +128,92 @@ The National Institute of Standards and Technology (NIST) defines end-to-end enc
 \begin{quote}
 "Communications encryption in which data is encrypted when being passed through a network, but routing information remains visible."~\cite[88]{Nieles2017}
 \end{quote}
-Consider the scenario, where Alice wants to send end-to-end encrypted message to Bob.
+Consider the scenario, where Alice wants to send an end-to-end encrypted message to Bob.
 Once they established cryptographic keys, Alice encrypts the message and sends it to Bob.
-During transit the encrypted message passes an untrusted network.
-In a classical understanding of E2EE, no third party or adversary within the untrusted network is able to access the message because it is encrypted \cite{Ermoshina2016}.
+During transit, the encrypted message passes an untrusted network.
+In a classical understanding of E2EE, no third party or adversary within the untrusted network can access the message because it is encrypted \cite{Ermoshina2016}.
 If this holds, Alice and Bob are said to be the endpoints of the encryption and their communication is end-to-end encrypted.
 
 \citeauthor{Hale2022} pointed out, however, that this classical understanding of E2EE has changed in recent years~\cite{Hale2022}. 
 With the rise of modern instant messaging services, E2EE should not only guarantee the confidentiality of the communication (e.g. that the communication can not be decrypted by the untrusted network).
-Rather, an adversary should not have any possibilities to influence the communication in any way.
-This implies that a modern E2EE based system should also guarantee authenticity and integrity of the exchanged data~\cite{Hale2022}. 
-The difference between the classical and current understanding of E2EE can be described more precise with different adversary models they defend against.
+Rather, an adversary should not have the possibility to influence communication in any way.
+This implies that modern E2EE-based systems should guarantee the authenticity and integrity of exchanged data~\cite{Hale2022}. 
+The difference between the classical and current understanding of E2EE can be described more precisely with the different adversary models they defend against.
 
 \subsection{Adversary model}
 This section details the security guarantees E2EE can provide by considering different adversaries.
 The above NIST definition states, that E2EE protects data passing an untrusted network.
 Within the network, the communicating entities do not have any control over their data.
-This motivates the idea, that the attacker is interpreted as the whole untrusted network:
-\begin{quote}
-    "The attacker carries the message" \todo{find source}
-\end{quote}
-It is assumed, that the adversary has limited computational capacity. 
-Specifically, it can no break correctly implemented cryptographic schemes without knowing the key.
+This motivates the idea, that the attacker is interpreted as the whole untrusted network~\cite{Nabeel2017}.
+It is assumed, that the adversary has limited computational capacity~\cite{Katz2020}. 
+Specifically, it cannot break correctly implemented cryptographic schemes without knowing the key.
 In the following, active and passive attackers are further distinguished. 
 
 \subsubsection{Passive adversaries}
-In general, passives attacks aim to break confidentiality.
-This includes eavesdropping and unauthorized reading of data~\cite{Eckert2018}. 
-In literature this is often defined as a honest-but-curious attacker. \todo{source + definition}
+In general, passive attacks aim to break confidentiality through eavesdropping or unauthorized reading of data~\cite{Eckert2018}. 
+In literature, this is often referred to as an honest-but-curious attacker~\cite{Nabeel2017}.
 The classical understanding of E2EE protects against passive adversaries. 
 The attacker is part of the untrusted network and observes the passed data.
-Its goal is it to get access the content of the exchanged messages.
+He wants to access the content of the exchanged messages.
 To defend against this passive attacker, cryptography can be applied to make passive attacks ineffective and to protect confidentiality~\cite{Eckert2018}.
 
 
 \subsubsection{Active adversaries}
-Todays interpretation of E2EE system is motivated by a stronger attacker model.
-An active attacker not only listens to the passed traffic.
-Rather, this attacker tries to insert, replace, drop, modify or replay messages to disrupt the communication.
-More sophisticated active attacks also include spoofing or denial of service attacks.
+Today's interpretation of E2EE-based systems is motivated by a stronger attacker model~\cite{Hale2022}.
+An active attacker not only listens to the passing traffic.
+Rather, this attacker tries to insert, replace, drop, modify or replay messages to disrupt the communication~\cite{Nabeel2017}.
+More sophisticated active attacks also include spoofing or denial of service attacks~\cite{Eckert2018}.
 The motivation can be diverse: 
-The attacker might want to access confidential content, introduce faked data or delete valid data passing the network.
-Another goal might be the impersonation of a user participating in the system.~\cite{Eckert2018}
-
-Possible defense strategies against this adversary are getting more complex.
-The detection of inserted, replaced or modified data require some sort of validation, that the received data was actually created by the assumed communication partner (authenticity) and that it was not modified during transit (integrity).
+The attacker might want to access confidential content, introduce forged data, or delete valid data passing the network.
+Another goal might be the impersonation of a user participating in the system.
+Possible defense strategies against this adversary become more complex.
+The detection of inserted, replaced or modified data require some sort of validation, that the received data was indeed created by the assumed communication partner (authenticity) and that it was not modified during transit (integrity).
 This can be realized with authenticated encryption techniques~\cite{Mallory2022}.
-To defend against dropped or replayed messages advanced mitigation strategies must be applied:
-Replayed messages can be detected with freshness, e.g. timestamps~\cite[419]{Eckert2018}.
-Dropped messages, however, require some sort of sequence counter, e.g. implemented in the TCP protocol ~\cite[115]{Eckert2018}
-
-
-\todo{Add references}
-\cite{Mallory2022} understands it as active attacker (sec 2.4)
-\cite{Hale2022} also proposes authenticate encryption which implicitly assumes an active attacker
-\todo{Add references}
-\cite{Nabeel2017} states, that if an attacker has access to metadata this is always critical when defending against active attackers, because metadata might allow to break privacy goals
-Thus, he also proposes passive attackers against E2EE can also be understand as passive attacker (not authentication required)
-
 
 \subsection{Endness}
 
 An intuitive understanding of E2EE implies that nobody - except the encryption endpoints - has access to the plaintext data.
-However, in an enterprise context this might not always be practical.
-In order to encrypt and decrypt data, the communication endpoints need to access the required cryptographic keys.
-If an attacker could compromise theses keys, the communication is not E2EE anymore, because the attacker could simply decrypt observed traffic with these keys.
-Thus, only the employee is allowed to know its cryptographic keys.
-Especially, they can not be shared or stored within the enterprise environment.
-However, if the user looses his keys and the company does not have any backups all communication of the employee is lost.
-This can be mitigated by introducing a trusted server, which stores cryptographic keys of all employees.
-One the one hand, this seems to be practical and might increase availability of data. 
-On the other hand, such a trusted server introduces key escrow and the communication is not E2EE in a strict sense anymore.
-The administrator of the trusted server has access to all keys.
-Since this administrator is most likely also the administrator of the whole enterprise network, he has access to the network traffic.
-This allows him to decrypt the communication between employees.
-Thus, the introduction of the trusted server most likely breaks E2EE.
-
-However, there is also the possibility to explicitly define the administrator of the trusted server as an additional encryption endpoint.
-In this case, there is no violation against E2EE, because the administrator is assumed to be a valid communication partner.
-This example shows the fragility of E2EE.
-By defining arbitrary encryption endpoints almost each system could claim to rely on E2EE.
-While this is technically true, it does not meet the intuitive understanding of end-to-end encrypted systems.
-\todo{cite HaHale2022 about endness}
-\todo{more sources?}
+In an enterprise context, however, this might be not practical.
+The communication endpoints need to access the respective cryptographic keys to encrypt and decrypt data.
+Only the employee is allowed to know its cryptographic keys.
+If an attacker could compromise these keys, the communication is not protected anymore because he could simply decrypt observed traffic.
+If users lose their keys and the company does not have any backups, however, all their communication is lost.
+This can be mitigated by introducing a trusted server, which stores the cryptographic keys of all employees.
+On the one hand, this seems to be practical and might increase the availability of data. 
+On the other hand, such a trusted server introduces key escrow.
+The communication is not E2EE in a strict sense anymore because the administrator of the trusted server has access to all keys.
+Please note that there is also the possibility to explicitly define this administrator as an additional encryption endpoint.
+In this case, there is no violation against E2EE because the administrator is assumed to be a valid communication partner.
+This example shows the fragility of E2EE:
+By defining arbitrary encryption endpoints almost every system could claim to rely on E2EE.
+While this is technically true, it does not meet the common understanding of end-to-end encrypted systems~\cite{Hale2022,Nabeel2017,Mallory2022}.
 
 \subsection{E2EE in this work}
-This section defines the understanding of E2EE in the context of this thesis based on the above considerations.
-Following the argumentation of~\citeauthor{Hale2022}~\cite{Hale2022}, E2EE is understood as defense against an active adversary.
-The attacker not only observes the data, but it also tries to modify existing data or to insert forged data.
-Any defense against this attacker requires both confidentiality and mutual authenticity.
-The following example justifies this statement.
-Assume a sender that wants to send an E2EE message to a single receiver.
-The following points need to be ensured.
+This section details the understanding of E2EE in the context of this thesis based on the above considerations.
+Following the argumentation of~\citeauthor{Hale2022}~\cite{Hale2022}, E2EE is understood as a defense against an active adversary.
+The attacker not only observes the data, but also tries to modify existing data or inserts forged data.
+Any defense against this attacker requires both confidentiality and mutual authenticity:
 \begin{enumerate}
     \item Confidentiality: 
-    The exchanged data needs to be encrypted. Otherwise each untrusted entity can access the exchanged data and E2EE is broken.
-    Moreover, the sender needs to be sure that only the intended receiver can decrypt the data. 
-    This is important in the context of symmetric cryptography, where a group of users might share a symmetric key.
-    Data which is encrypted under this shared symmetric key can be decrypted by all members of the group.
-    Thus, the encryption endpoints is equal to the group of users.
-    In symmetric cryptography, E2EE messages between a sender and a single receiver always require a pairwise exchanged symmetric key.
-    When operating with asymmetric cryptography, a key-pair per receiver is required.
-    If a receiver keeps the private key confidential, it can be ensured that only the receiver can decrypt data encrypted under his or her public key.
-    \item Authenticity: 
-    The receiver needs to be sure that the message was indeed sent by the assumed sender. 
-    This requirement is crucial to defend against man-in-the middle attackers.
-    If a receiver can not validate the origin of the message, an attacker could simply impersonate the sender and encrypt faked data under the public key of the receiver.
-    This requirement demands cryptographically signed messages to ensure that the message was actually sent by the claimed sender.
-    Depending on the implemented E2EE protocol the receiver might be required to verify that the sender intended to share the data with him or her.
-    Due to the risk of surreptitious forwarding this requires additional security mechanisms besides a plain cryptographic signature~\cite{Davis2001}.
+    The exchanged data needs to be encrypted. 
+    Otherwise, each untrusted entity can access the exchanged data and E2EE is broken.
+    \item Receiver authenticity:
+    The sender needs to be sure that only the intended receiver can decrypt the data.
+    Specifically, no unauthorized entity must be able to decrypt the cipher.
+    This requires special attention in the context of symmetric cryptography.
+    Assume a group of users sharing a symmetric key.
+    Data that is encrypted under this key can be decrypted by all members of the group.
+    Thus, the set of encryption endpoints is equal to the group of users.
+    When symmetric cryptography is used to construct E2EE-based protocols, messages between a single sender and a single receiver always require an exclusively exchanged symmetric key to ensure receiver authenticity.
+    When operating with asymmetric cryptography, a key pair per receiver is required.
+    If a receiver keeps the private key confidential, it can be ensured that only the receiver can decrypt data enabling receiver authenticity.
+    \item Sender authenticity: 
+    The receiver needs to be sure that the message was indeed sent by the assumed sender.
+    Specifically, the receiver must ensure that the message was not created from a unknown entity.
+    This requirement is crucial to defend against man-in-the-middle attackers.
+    If a receiver can not validate the origin of the message, an attacker could simply impersonate the sender and encrypt fake data under the public key of the receiver.
+    Digitally signed messages ensure that a message was indeed sent by the claimed sender.
+    Due to the risk of surreptitious forwarding, this requires additional security mechanisms besides a plain digital signature~\cite{Davis2001}.
 \end{enumerate}
 
 
